<?xml version="1.0"?>
<package format="2">
  <name>ros_threads</name>
  <version>0.0.0</version>
  <description>The ros_threads package</description>
  <maintainer email="annamitgom@gmail.com">Anna Miti</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/ros_threads</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
